[gd_scene format=3 uid="uid://storymode"]

[ext_resource type="Script" path="res://scripts/story_mode.gd" id="1_story"]
[ext_resource type="Texture2D" uid="uid://cfmpacohs3gw6" path="res://assets/main_menu.png" id="2_bg"]
[ext_resource type="FontFile" uid="uid://c2e7duja1spvc" path="res://assets/fonts/AmaticSC-Bold.ttf" id="3_font"]

[sub_resource type="FontVariation" id="FontVariation_bold"]
base_font = ExtResource("3_font")
variation_embolden = 0.8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 40
shadow_offset = Vector2(0, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_primary"]
bg_color = Color(0.2, 0.6, 1.0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.2, 0.6, 1.0, 0.3)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_secondary"]
bg_color = Color(0.95, 0.95, 0.95, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_secondary_hover"]
bg_color = Color(1, 0.4, 0.4, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lives"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 10
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_score"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 10
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_normal"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_hover"]
bg_color = Color(0.96, 0.96, 0.96, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.08)
shadow_size = 8
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_pressed"]
bg_color = Color(0.9, 0.9, 0.9, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="StoryMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_story")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95, 0.96, 0.97, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="SafeArea/VBox"]
layout_mode = 2
alignment = 0

[node name="LivesPanel" type="PanelContainer" parent="SafeArea/VBox/Header"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lives")

[node name="Container" type="MarginContainer" parent="SafeArea/VBox/Header/LivesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="LivesLabel" type="RichTextLabel" parent="SafeArea/VBox/Header/LivesPanel/Container"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]❤️❤️❤️[/center]"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="Spacer" type="Control" parent="SafeArea/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScorePanel" type="PanelContainer" parent="SafeArea/VBox/Header"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_score")

[node name="ScoreLabel" type="Label" parent="SafeArea/VBox/Header/ScorePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="SafeArea/VBox/Header"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="PauseButton" type="Button" parent="SafeArea/VBox/Header"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pause_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_pause_hover")
text = "II"

[node name="DisplayContainer" type="CenterContainer" parent="SafeArea/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SafeArea/VBox/DisplayContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="StoryLabel" type="Label" parent="SafeArea/VBox/DisplayContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 300)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 70
text = "Monster ini alergi warna MERAH!
Jangan beri dia warna itu!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsGrid" type="GridContainer" parent="SafeArea/VBox/DisplayContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="FeedbackLabel" type="Label" parent="SafeArea/VBox/DisplayContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[connection signal="pressed" from="SafeArea/VBox/Header/PauseButton" to="." method="_on_pause_button_pressed"]

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/Margin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 80
text = "SELESAI"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 64
text = "Skor: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_primary")
text = "MAIN LAGI"

[node name="MenuButton" type="Button" parent="GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_secondary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_secondary_hover")
text = "MENU UTAMA"

[connection signal="pressed" from="GameOverPanel/Margin/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/Margin/VBoxContainer/MenuButton" to="." method="_on_main_menu_button_pressed"]

[node name="PauseOverlay" type="ColorRect" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="PanelContainer" parent="PauseOverlay/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="PauseOverlay/CenterContainer/Card"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="PauseOverlay/CenterContainer/Card/Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="PauseOverlay/CenterContainer/Card/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 72
text = "JEDA"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseOverlay/CenterContainer/Card/Margin/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_primary")
text = "LANJUT"

[node name="MenuButton" type="Button" parent="PauseOverlay/CenterContainer/Card/Margin/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_secondary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_secondary_hover")
text = "MENU UTAMA"

[connection signal="pressed" from="PauseOverlay/CenterContainer/Card/Margin/VBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseOverlay/CenterContainer/Card/Margin/VBox/MenuButton" to="." method="_on_main_menu_button_pressed"]
